@@ -1,3 +1,8 @@
+Mon Jan 29 12:04:16 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: Add "Show Full Answer" menu item, always show
+	the Programs menu and add a "Console" item to the programs menu
+
 Mon Jan 29 10:24:52 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/equation_solving/formulas.gel: Fix handling of real solutions
